--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,11 @@
 site_name: My wiki
 use_directory_urls: true
 nav:
-  - Home: index.md
+  - index.md
   - About:
       - This Site: about/this_site.md
-  - Blog: blog/index.md
+  - Blog: 
+      - blog/index.md
 theme:
   name: material
   palette:
@@ -28,14 +29,28 @@ theme:
     - navigation.instant
     - navigation.tracking
     - navigation.tabs
-  # name: terminal
-  # palette: dark
-  # locale: en
+    - search.suggest
+    - search.highlight
 plugins:
   - blog:
       blog_dir: blog
       blog_index_title: "Blog"
       blog_toc: false
+      post_date_format: full
   - tags
   - search
   - meta
+  - git-revision-date-localized:
+      enable_creation_date: true
+  - callouts
+  - git-authors
+  - mike:
+    canonical_version: latest
+markdown_extensions:
+  # Pyhton Markdown
+  - pymdownx.details
+  - pymdownx.superfences
+  - nl2br
+  - admonition
+repo_url: https://github.com/spreadneck/wiki
+repo_name: spreadneck/wiki
