--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
 Markdown==3.8.2
 mkdocs==1.6.1
 mkdocs-material~=9.6.16
+mike
 
 # Python Markdown Extensions
 pygments>=2.12
 pymdown-extensions>=10.16
+markdown-callouts
+
+# MkDocs Plugins
+mkdocs-git-revision-date-plugin
+mkdocs-git-revision-date-localized-plugin
+mkdocs-callouts
+mkdocs-git-authors-plugin
