--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,7 @@ markdown-callouts
 # MkDocs Plugins
 mkdocs-git-revision-date-plugin
 mkdocs-git-revision-date-localized-plugin
+
 mkdocs-callouts
 mkdocs-git-authors-plugin
+mkdocs-git-committers-plugin-2
